--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -2,6 +2,7 @@
     padding: 110px 70px 106px;
     background-color: #202020;
     max-width: 1280px;
+    margin: 0 auto;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
     .about-me{
@@ -126,7 +127,7 @@
 .about-me__img{
     width: 270px;
     height: 327px;
-    border-radius: 10px;
+    border-radius: 12px;
     object-fit: cover;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
