--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -2,6 +2,7 @@
     padding: 110px 70px;
     background-color: #202020;
     max-width: 1280px;
+    margin: 0 auto;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
     .about-project{
