--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,7 @@
 .app{
-    max-width: 1280px;
-    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
     background-color: #202020;
+    font-family: "Inter", Arial, Helvetica, sans-serif;
 }
