--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 auto;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
     .header{
@@ -17,5 +18,12 @@
     }
 }
 .header_light{
+    padding: 18px 70px;
+    max-width: 1280px;
+    background-color: #202020;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
     background-color: #073042;
 }
