--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin: 0 auto;
 }
 .login-form{
     max-width: 396px;
