--- a/src/components/MoreButton/MoreButton.css
+++ b/src/components/MoreButton/MoreButton.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin: 0 auto;
 }
 .more__button{
     text-align: center;
