--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -44,10 +44,10 @@
     align-items: center;
     justify-content: center;
     max-width: 1280px;
-    height: 100%;
     z-index: 10;
     padding: 20px;
     background-color: #202020;
+    margin: 100px auto;
 }
 
 .preloader__container {
