--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin: 0 auto;
 }
 .profile-form{
     max-width: 410px;
