--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -4,6 +4,7 @@
     background-color: #073042;
     position: relative;
     height: 560px;
+    margin: 0 auto;
 }
 @media screen and (max-width:1024px) and (min-width:685px){
     .promo{
