--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,9 +1,11 @@
 .register{
     background-color: #202020;
     max-width: 1280px;
+    height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin: 0 auto;
 }
 .register-form__button{
     margin-top: 70px;
