--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,6 +2,7 @@
     padding: 70px 70px 10px;
     background-color: #202020;
     max-width: 1280px;
+    margin: 0 auto;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
     .search-form{
@@ -52,16 +53,16 @@
     font-size: 14px;
     line-height: 1.33;
     color: white;
-    background-color: #4285f4;
+    background: rgba(66, 133, 244, 1);
+    border: unset;
     width: 100px;
     height: 52px;
     border-radius: 5px;
     cursor: pointer;
-    opacity: 1;
-    transition: opacity .3s;
+    transition: background .3s;
 }
-.search-form__button{
-    opacity: .8;
+.search-form__button:hover{
+  background: rgba(66, 133, 244, .8);
 }
 .search-form__button:disabled{
     cursor: not-allowed;
