--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -2,6 +2,7 @@
     padding: 100px 70px;
     background-color: #272727;
     max-width: 1280px;
+    margin: 0 auto;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
     .techs{
