дипломная работа левел 2 попытка 3

--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,16 +1,18 @@
 .about-project{
-    padding: 110px 70px;
     background-color: #202020;
+}
+.about-project__container{
+    padding: 110px 70px;
     max-width: 1280px;
     margin: 0 auto;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
-    .about-project{
+    .about-project__container{
         padding: 90px 50px;
     }
 }
 @media screen and (max-width:768px){
-    .about-project{
+    .about-project__container{
         padding: 70px 18px;
     }
 }
