--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,16 +1,18 @@
 .about-me{
-    padding: 110px 70px 106px;
     background-color: #202020;
+}
+.about-me__container{
+    padding: 110px 70px 106px;
     max-width: 1280px;
     margin: 0 auto;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
-    .about-me{
+    .about-me__container{
         padding: 90px 50px 71px;
     }
 }
 @media screen and (max-width:768px){
-    .about-me{
+    .about-me__container{
         padding: 70px 14px 51px;
     }
 }
