--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,8 @@
 .app{
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-width: 320px;
+    box-sizing: border-box;
     margin: 0 auto;
     background-color: #202020;
     font-family: "Inter", Arial, Helvetica, sans-serif;
