--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,3 +1,10 @@
+.modal{
+    display: none;
+}
+@media screen and (max-width:1023px){
+    .modal{
+        display: block;
+    }
 .modal__overlay{
     position: fixed;
     top: 0;
@@ -106,4 +113,5 @@
     background: #313131;
     border-radius: 50px;
     margin-left: 7px;
+}
 }
