--- a/src/components/HeaderBurger/HeaderBurger.css
+++ b/src/components/HeaderBurger/HeaderBurger.css
@@ -1,16 +1,16 @@
 .header-burger{
     display: none;
-    background-image: url(../../images/header-burger.svg);
-    width: 44px;
-    height: 44px;
-    background-color: unset;
-    border: none;
-    background-position: center;
-    background-repeat: no-repeat;
-    cursor: pointer;
 }
-@media screen and (max-width:1023px){
-    .header__burger{
+@media screen and (max-width:1025px){
+    .header-burger{
         display: block;
+        background-image: url(../../images/header-burger.svg);
+        width: 44px;
+        height: 44px;
+        background-color: unset;
+        border: none;
+        background-position: center;
+        background-repeat: no-repeat;
+        cursor: pointer;
     }
 }
