--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,10 +1,6 @@
 .modal{
-    display: none;
+    display: block;
 }
-@media screen and (max-width:1023px){
-    .modal{
-        display: block;
-    }
 .modal__overlay{
     position: fixed;
     top: 0;
@@ -14,6 +10,7 @@
     background: black;
     opacity: .3;
     transition: opacity .3s;
+    z-index: 100;
 }
 .modal__box{
     width: 520px;
@@ -25,6 +22,7 @@
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 100;
 }
 @media screen and (max-width:630px){
     .modal__box{
@@ -43,6 +41,7 @@
     right: 22px;
     background-color: unset;
     cursor: pointer;
+    z-index: 100;
 }
 @media screen and (max-width:630px){
     .modal__close{
@@ -53,6 +52,7 @@
 .modal__navigation{
     margin-top: 159px;
     margin-bottom: auto;
+    z-index: 100;
 }
 @media screen and (max-width:630px){
     .modal__navigation{
@@ -63,10 +63,12 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    z-index: 100;
 }
 .modal__navigation_item{
     text-align: center;
     margin-bottom: 28px;
+    z-index: 100;
 }
 @media screen and (max-width:630px){
     .modal__navigation_item{
@@ -81,10 +83,12 @@
     font-size: 18px;
     line-height: 1.2;
     color: white;
+    z-index: 100;
 }
 .modal__navigation_link_on{
     padding-bottom: 4px;
     border-bottom: 2px solid white;
+    z-index: 100;
 }
 .modal__profile-link{
     font-family: "Inter", Arial, Helvetica, sans-serif;
@@ -99,6 +103,7 @@
     transition: opacity .3s;
     display: inline-flex;
     margin-bottom: 90px;
+    z-index: 100;
 }
 .modal__profile-link:hover{
     opacity: .7;
@@ -113,5 +118,5 @@
     background: #313131;
     border-radius: 50px;
     margin-left: 7px;
-}
+    z-index: 100;
 }
