--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -2,8 +2,23 @@
     background-color: #222222;
     box-sizing: border-box;
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
+    height: 271px;
+    width: 364px;
+}
+@media screen and (max-width:1024px) and (min-width:768px){
+    .movies-card{
+        height: 258px;
+        width: 339px;
+    }
+}
+@media screen and (max-width:768px){
+    .movies-card{
+        height: 236px;
+        width: 300px;
+    }
 }
 .movies-card__info{
+    box-sizing: border-box;
     padding: 14px;
     display: flex;
     justify-content: space-between;
@@ -17,6 +32,12 @@
     color: white;
     padding: 0;
     margin: 0 0 9px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    box-sizing: border-box;
+    width: 240px;
+    text-align: left;
 }
 .movies-card__time{
     font-family: "Inter", Arial, Helvetica, sans-serif;
@@ -27,6 +48,8 @@
     color: #8b8b8b;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    text-align: left;
 }
 .movies-card__save{
     width: 30px;
@@ -41,16 +64,18 @@
 }
 .movies-card__poster{
     height: 203px;
-    width: auto;
+    width: 364px;
     object-fit: cover;
 }
 @media screen and (max-width:1024px) and (min-width:768px){
     .movies-card__poster{
         height: 190px;
+        width: 339px;
     }
 }
 @media screen and (max-width:768px){
     .movies-card__poster{
         height: 168px;
+        width: 300px;
     }
 }
